// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentImage component renders correctly 1`] = `
<ImageLoaderStyled
  src="http://images/test.png"
>
  <ContentImageStyled
    alt="Image alt text"
    title=""
  />
  <ContentImagePlaceholder
    className="color-alt"
  >
    <span>
      Image unavailable
    </span>
  </ContentImagePlaceholder>
  <ContentImagePlaceholder>
    <ImageLoading />
  </ContentImagePlaceholder>
</ImageLoaderStyled>
`;

exports[`ContentImage component renders correctly with title specified 1`] = `
<ImageLoaderStyled
  src="http://images/test.png"
>
  <ContentImageStyled
    alt="Image alt text"
    title="Image title"
  />
  <ContentImagePlaceholder
    className="color-alt"
  >
    <span>
      Image unavailable
    </span>
  </ContentImagePlaceholder>
  <ContentImagePlaceholder>
    <ImageLoading />
  </ContentImagePlaceholder>
</ImageLoaderStyled>
`;
